# kernel_extractor

./: Cargo.toml
src/: device_utils.rs  log_utils.rs  main.rs
